--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "watch:css": "yarn build:css && node-sass src/ -o src/ -w -r",
     "start:app": "react-scripts start",
     "start": "npm-run-all start:app watch:css",
-    "build": "react-scripts build",
+    "build": "cross-env-shell REACT_APP_URL=$URL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "codegen": "graphql-codegen --config codegen.yml"
@@ -63,6 +63,7 @@
     "@graphql-codegen/typescript": "^1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "^2.2.3",
+    "cross-env": "^7.0.3",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "sass-loader": "^11.0.1"
